# dotfiles

./: .gitignore  .lintstagedrc.js  .prettierrc.cjs  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTES.md  README.md  TODO.md  config.toml  justfile  package.json  pnpm-lock.yaml  rustfmt.toml
.config/dotfiles/: config.toml
.github/actions/just/: action.yml
.github/actions/node/: action.yml
.github/workflows/: ci.yml
example/: config_bad.toml  config_main.toml
links/aerospace/.config/aerospace/: aerospace.toml  default.toml
links/borders/.config/borders/: bordersrc
links/git/: .gitconfig
links/git/.config/git/: kyldvs.gitconfig  stoke.gitconfig  ykcd.gitconfig
links/sketchybar/.config/sketchybar/: icons.sh  sketchybarrc
links/sketchybar/.config/sketchybar/items/: front_app.sh  spaces.sh
links/sketchybar/.config/sketchybar/plugins/: cpu.sh  github.sh  mail.sh
links/tmux/.config/tmux/: tmux.conf
links/wezterm/.config/wezterm/: wezterm.lua
links/zsh/: .graphite.zsh  .p10k.zsh  .vcs.zsh  .zshrc
links/zsh/.zfunc/: _sd  _sdg  _swarm
script/: setup
src/: config.rs  emoji.rs  lib.rs  main.rs  out.rs  step.rs  terminal.rs  utils.rs
src/config/: parse.rs
src/git/: .gitconfig
src/homebrew/: investigate.txt  recipes.txt
src/state/: mod.rs
src/step/: fonts.rs  path.rs
src/steps/: fonts.rs  mod.rs  path.rs  welcome.rs
src/tui/: mod.rs
src/utils/: command.rs  mod.rs  path.rs  platform.rs
tasks/chore/: justfile
tasks/ci/: justfile
tasks/repo/: justfile
todo/vscode-2025-03-07/: keybindings.json  settings.json
