[package]
name = "dotfiles"
version = "0.1.0"
authors = ["Kyle <git@kyle.dev>"]
description = "CLI to setup my dotfiles."
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.18", features = ["derive"] }
dirs = "4.0.0"
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
termion = "1.5.6"
which = "4.2.5"
